--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "use-debounce": "^10.0.0",
     "zustand": "^4.4.7"
