--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "date-fns": "^3.2.0",
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
     "next-themes": "^0.2.1",
