--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "date-fns": "^3.2.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
     "next-themes": "^0.2.1",
